styles/main.scss
// banner style
.banner {
  .wave {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: -1;
    opacity: 0.13;
  }
}

.dark .banner .wave {
  opacity: 0.3;
  color: #082d42 !important;
}

// about style
.image-grid-2 > img {
  margin-top: 50px !important;
  @include desktop {
    margin-top: 0 !important;
  }
}

.image-grid-3 > img {
  margin-top: 10px !important;
  @include desktop {
    margin-top: 0 !important;
  }
}


// quote card style
.card {
  &.quote-card {
    padding: 0 30px;
    margin: 2em 2em 0 2em;
    background-color: $white;
    @include mobile {
      padding: 0 10px;
    }


    &::before {
      content: "";
      position: absolute;
      bottom: -30px;
      left: -30px;
      width: calc(100% + 60px);
      height: 100%;
      background-color: rgba($white, 0.5);
      z-index: -1;
      pointer-events: none;
      border-radius: 4px;
      transition: 0.3s;
      @include mobile {
        bottom: -10px;
        left: -10px;
        width: calc(100% + 20px);
      }
    }
  }
}

.dark {
  .card.quote-card {
    .quote-text::before {
      background-color: $darken;
    }
  }
  .card.stats-card{
    background-color: $darken;
  }
  background-color: $darken;

  .card-body {
    a:hover {
      .post-title {
        color: $color-primary !important;
      }
    }
  }
}


// post card style
.card {
  &.post-card {
    padding: 0 30px;
    @include mobile {
      padding: 0 10px;
    }

    .card-body {
      padding: 0;

      a:hover {
        color: inherit;

        .post-title {
          color: $color-primary;
        }
      }
    }

    .post-image {
      z-index: 1;
      margin-bottom: 50px;
      transition: 0.3s;
      filter: grayscale(1);
      @include mobile {
        margin-bottom: 30px;
      }

      img {
        transition: 0.3s;
        object-fit: contain;
      }

      &::before {
        content: "";
        position: absolute;
        bottom: -30px;
        left: -30px;
        width: calc(100% + 60px);
        height: 100%;
        background-color: rgba($white, 0.5);
        z-index: -1;
        pointer-events: none;
        border-radius: 4px;
        transition: 0.3s;
        @include mobile {
          bottom: -10px;
          left: -10px;
          width: calc(100% + 20px);
        }
      }
    }

    &:hover .post-image {
      filter: grayscale(0);

      img {
        transform: translateY(-5px);
        @include mobile {
          transform: translateY(0px);
        }
      }

      &::before {
        background-color: $white;
      }
    }
  }
}

.post-title {
  color: $dark;
  transition: 0.3s;
}

.dark {
  .card.post-card {
    .post-image::before {
      background-color: $darken;
    }
  }

  .card-body {
    a:hover {
      .post-title {
        color: $color-primary !important;
      }
    }
  }
}

.card.post-card-col-4 {
  padding: 0 2rem 0 2rem;
  @include mobile {
    padding: 0 2rem 0 2rem;
  }

  .post-image {
    margin-bottom: 30px;
    @include mobile {
      margin-bottom: 20px;
    }

    &::before {
      bottom: -18px;
      left: -18px;
      width: calc(100% + 36px);
      @include mobile {
        bottom: -7px;
        left: -7px;
        width: calc(100% + 14px);
      }
    }
  }

  .card-meta,
  .card-footer {
    zoom: 0.95;
  }

}

// card-meta
.card-meta {
  > li {
    line-height: 1;
    vertical-align: middle;

    i {
      vertical-align: text-bottom;
    }
  }

  a {
    color: $gray;
  }

  .list-inline-item:not(:last-child) {
    margin-right: 1rem;
    @include tablet {
      margin-right: 0.7rem;
    }
  }

  // card author style
  .card-meta-author {
    display: inline-block;

    span {
      transition: 0.2s;
    }

    &:hover {
      color: $gray;

      span {
        color: $color-primary !important;
      }
    }

    img {
      border-radius: 4px;
    }

    span {
      vertical-align: middle;
    }
  }

  // card meta style
  .card-meta-tag {
    .list-inline-item:not(:last-child) {
      margin-right: 0.5rem;
    }

    a {
      background-color: rgba($color-primary, 0.1);
      color: $gray;
      padding: 6px 10px;
      border-radius: 2px;
      transition: 0.15s;
      text-transform: capitalize;

      &:hover {
        background-color: $color-primary;
        color: $white !important;
      }
    }
  }
}

.dark {
  .card-meta-tag a {
    background-color: $darken;
    color: rgba($white, 0.8);
  }

  .card-meta a {
    color: #c2c2c2;
  }
}

// single blog post style
.post-share-block {
  width: 174px;
  @include desktop {
    width: 100%;
  }
}

.post-content-block {
  width: calc(83.33333334% - 174px);
  @include desktop {
    width: 100%;
  }
}

.single-post-similer,
.disqus-comment,
.single-post-author {
  margin-top: 100px;
}

.post-meta-tag {
  a {
    display: inline-block;
    background-color: #f7f8fa;
    color: $gray;
    padding: 6px 13px;
    font-size: 15px;
    @extend .rounded;

    &:hover {
      background-color: transparent;
      color: $color-primary;
    }
  }
}

// archive post block style
.archive-block {
  &:not(:last-child) {
    margin-bottom: 40px;
  }

  h2 {
    margin-top: 40px;
    line-height: 1;
    margin-bottom: 20px;
    position: relative;

    i {
      position: absolute;
      font-size: 80px;
      opacity: 0.05;
      top: -27px;
      left: -25px;
    }
  }

  h2:first-child {
    margin-top: 0;
  }

  .archive-post-item {
    font-size: 18px;
    @include tablet {
      font-size: 16px;
    }

    &:last-child {
      margin-bottom: 0;
    }

    span {
      margin: 0 20px;
      @include tablet {
        display: none;
      }
    }
  }

  a:hover {
    text-decoration: underline;
  }
}

// newsletter-block style
.newsletter-block {
  .input-group-text,
  .form-control {
    background-color: transparent;
    margin: 0 8px;
  }

  .form-control {
    margin-right: 12px;
    @include mobile {
      margin-right: 0;
    }
  }

  .input-group-text {
    padding: 0 1.5rem;
    height: 50px;
    @extend .rounded;
  }

  .form-control {
    &:focus {
      border-color: $color-primary;

      ~ .input-group-append {
        .input-group-text {
          border-color: $color-primary;
          background-color: $color-primary;
          color: $white;
        }
      }
    }
  }

  ::-webkit-input-placeholder {
    color: rgba($dark, 0.7);
  }

  :-ms-input-placeholder {
    color: rgba($dark, 0.7);
  }

  ::placeholder {
    color: rgba($dark, 0.7);
  }

  button.input-group-text {
    color: $dark;

    &:hover {
      border-color: $color-primary;
      background-color: $color-primary;
      color: $white;
    }
  }
}

.dark .newsletter-block {
  .form-control {
    color: $white;

    &:focus {
      ~ .input-group-append {
        .input-group-text {
          color: $white;
        }
      }
    }
  }

  ::-webkit-input-placeholder {
    color: rgba($light, 0.7);
  }

  :-ms-input-placeholder {
    color: rgba($light, 0.7);
  }

  ::placeholder {
    color: rgba($light, 0.7);
  }

  button.input-group-text {
    color: $light;

    &:hover {
      color: $light;
    }
  }
}

